--- a/style.css
+++ b/style.css
@@ -26,3 +26,14 @@
     font-size: 15px;
     font-weight: bold;
 }
+
+.logo{
+    text-align: center;
+}
+
+body{
+    background-image: url("images/image-fond-connec.jpg");
+    background-size: 100%;
+    background-repeat: no-repeat;
+
+}
