--- a/map.css
+++ b/map.css
@@ -12,7 +12,7 @@ body { margin: 0; padding: 0; }
 }
 #map { position: absolute; width: 100%; height: 100%;}
 
-#requir { position: absolute; top: 250px; left: 400px; width: 100%; height: 100%; max-width: 1200px; max-height: 900px; }
+#requir { position: absolute; top: 250px; left: 200px; right:200px; width: 100%; height: 100%; max-width: 1200px; max-height: 900px; border-radius:20px}
 
 #ecart {padding: 33em;}
 
